--- a/posix-configs/arm/px4_linux.config
+++ b/posix-configs/arm/px4_linux.config
@@ -9,13 +9,9 @@ param set BAT_V_DIV 10.9176300578
 param set BAT_CNT_V_CURR 0.001
 param set BAT_A_PER_V 15.391030303
 dataman start
-df_lsm9ds1_wrapper start -R 4
-#df_mpu9250_wrapper start -R 10
-#df_hmc5883_wrapper start
-df_ms5611_wrapper start
-navio_rgbled start
-navio_adc start
-gps start -d /dev/spidev0.0 -i spi -p ubx
+df_mpu9250_wrapper start -R 10
+#df_ms5611_wrapper start
+#gps start -d /dev/spidev0.0 -i spi -p ubx
 sensors start
 commander start
 navigator start
@@ -26,10 +22,9 @@ mc_att_control start
 mavlink start -u 14556 -r 1000000
 mavlink stream -u 14556 -s HIGHRES_IMU -r 50
 mavlink stream -u 14556 -s ATTITUDE -r 50
-mavlink start -d /dev/ttyUSB0
-mavlink stream -d /dev/ttyUSB0 -s HIGHRES_IMU -r 50
-mavlink stream -d /dev/ttyUSB0 -s ATTITUDE -r 50
-navio_sysfs_rc_in start
-navio_sysfs_pwm_out start
+#mavlink start -d /dev/ttyUSB0
+#mavlink stream -d /dev/ttyUSB0 -s HIGHRES_IMU -r 50
+#mavlink stream -d /dev/ttyUSB0 -s ATTITUDE -r 50
+linux_sbus start -d /dev/serial2 -c 8 
 logger start -t -b 200
 mavlink boot_complete
